# only_torch

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  节点级基因组统一演化与 ONNX 接入规划.md
.doc/: architecture_roadmap.md  dev_environment_setup.md  gradient_clear_and_accumulation_design.md  graph_execution_refactor.md  high_level_architecture_design.md  optimization_candidates.md  python_MatrixSlow_pid.md  rl_python_env_setup.md  terminology_convention.md
.doc/_archive/: architecture_v2_design.md  autodiff_unification_design.md  dynamic_graph_lifecycle_design.md  future_enhancements.md  future_node_types.md  gradient_flow_control_design.md  graph_execution_refactor.md  graph_refactoring_design.md  multi_input_forward_design.md
.doc/design/: api_layering_and_seed_design.md  architecture_v2_design.md  autodiff_unification_design.md  batch_mechanism_design.md  broadcast_mechanism_design.md  data_loader_design.md  distributions_design.md  dynamic_graph_lifecycle_design.md  future_enhancements.md  future_node_types.md  gradient_clear_and_accumulation_design.md  gradient_flow_control_design.md  graph_refactoring_design.md  graph_serialization_design.md  input_node_semantics_design.md  input_node_unification_design.md  memory_mechanism_design.md  mode_design.md  my_zero_algorithm_vision.md  neural_architecture_evolution_design.md  neural_architecture_evolution_design_bak.md  node_vs_layer_design.md  onnx_import_strategy.md  optimization_strategy.md  optimizer_architecture_design.md  rl_roadmap.md  spatial_vision_tasks_roadmap.md  visualization_guide.md
.doc/optimize/: get_node_grad_optimization_analysis.md
.doc/reference/: logic_books.md  python_MatrixSlow_pid.md
.github/instructions/: evolution.instructions.md  rl.instructions.md  testing.instructions.md
.issue/: todo_list.md  trivial.md
.issue/_archive/: bbox_loss_analytical_grad.md  evolution_deformable_conv2d_segmentation_poor_output.md  noncontiguous_data_image_pipeline_contract.md  post_ez_v2_research_backlog.md
.issue/items/: 2026-04-28_spatial_evolution_slow.md  bbox_loss_analytical_grad.md  cpu_only_mcts_image_realtime_risk.md  muzero_cartpole_scalar_value_plateau.md  my_zero_action_space_sampled_policy.md  my_zero_gumbel_completedq_cartpole_negative.md  my_zero_reanalyze_cartpole_regression.md  noncontiguous_data_image_pipeline_contract.md  pendulum_failure_diagnosis.md  post_ez_v2_research_backlog.md
MatrixSlow/example/: client.py  exampe_optimizer.py  serving.py  train.py
MatrixSlow/matrixslow/: __init__.py  matrixslow.py
MatrixSlow/matrixslow_serving/: __init__.py
benches/: attention.rs  backward.rs  conv2d.rs  end_to_end.rs  loss.rs  my_zero_forward.rs  my_zero_train_batch.rs  normalization.rs  optimizer.rs  pool2d.rs  rnn.rs  smoke.rs  tensor_ops.rs
examples/california_housing/: california_housing.dot  main.rs  model.rs
examples/cartpole_ppo/: main.rs  model.rs
examples/cartpole_sac/: cartpole_sac.dot  main.rs  model.rs
examples/chinese_chess/: chinese_chess.dot  data.rs  main.rs  model.rs
examples/dual_input_add/: dual_input_add.dot  main.rs  model.rs
examples/dual_output_classify/: dual_output_classify.dot  main.rs  model.rs
examples/efficientzero/: README.md
examples/evolution_iris/: evolution_iris.dot  iris_model.otm  main.rs
examples/evolution_mnist/: main.rs
examples/evolution_mnist_cnn/: evolution_mnist_cnn.dot  main.rs
examples/evolution_parity_seq/: evolution_parity_seq.dot  main.rs
examples/evolution_parity_seq_var_len/: evolution_parity_seq_var_len.dot  main.rs
examples/evolution_xor/: evolution_xor.dot  main.rs  xor_model.otm
examples/iris/: data.rs  iris.dot  main.rs  model.rs
examples/mnist/: main.rs  mnist.dot  model.rs
examples/mnist_cnn/: main.rs  mnist_cnn.dot  model.rs
examples/mnist_gan/: main.rs  mnist_gan.dot  mnist_gan_inference.dot  model.rs
examples/multi_io_fusion/: main.rs  model.rs  multi_io_fusion.dot
examples/multi_label_point/: main.rs  model.rs  multi_label_point.dot
examples/my_zero/: README.md
examples/parity_fixed_len/: main.rs  model.rs
examples/parity_gru_var_len/: main.rs  model.rs  parity_gru_var_len.dot
examples/parity_lstm_fixed_len/: main.rs
examples/parity_lstm_var_len/: main.rs  model.rs  parity_lstm_var_len.dot
examples/parity_rnn_fixed_len/: main.rs  model.rs  parity_rnn_fixed_len.dot
examples/parity_rnn_var_len/: main.rs  model.rs  parity_rnn_var_len.dot
examples/parity_var_len/: main.rs  model.rs
examples/sac/: README.md  beta_distribution_note.md  sac_mathematical_foundations.md
examples/shared/: synthetic_shapes.rs
examples/siamese_similarity/: main.rs  model.rs  siamese_similarity.dot
examples/sine_regression/: main.rs  model.rs  sine_regression.dot
examples/spiral/: main.rs  model.rs
examples/xor/: main.rs  model.rs  xor.dot
models/: chess_cnn.pth
python/gym_env/: __init__.py  pyproject.toml
python/gym_env/gomoku/: __init__.py  board.py  env.py  opponents.py  test_board.py
scripts/: _lr_scheduler_ref.py  generate_chess_data.py  prepare_real_pieces.py  requirements.txt  train_chess_cnn.py
src/: lib.rs
tests/: __init__.py  attention_reference.py  batch_norm_reference.py  bbox_loss_reference.py  evolution_xor_multi_seed.rs  integrated_test.rs  layer_norm_reference.py  mode_invariants.rs  onnx_otm_load_bench.rs  optimizer_example.rs  parity_fixed_len_pytorch.py  parity_rnn_fixed_len_pytorch.py  test_ada_line.rs  test_adaline.rs  test_adaline_batch.rs  test_california_housing_price.rs  test_categorical.py  test_cse_dedup.rs  test_execution_context_invariants.rs  test_mnist.rs  test_mnist_batch.rs  test_mnist_batch_v2.rs  test_mnist_cnn.rs  test_mnist_gan.rs  test_mnist_layer.rs  test_mnist_linear.rs  test_mnist_linear_v2.rs  test_mode_invariants.rs  test_normal.py  test_numpy.py  test_numpy_diag.py  test_optimizer_example.rs  test_parity_detection.rs  test_parity_detection_batch.rs  test_parity_detection_varlen.rs  test_parity_gru_layer.rs  test_parity_lstm_layer.rs  test_parity_rnn_layer.rs  test_python.py  test_simple_regression.rs  (+6 more)
(+1027 files in other folders)
