[package]
    name         ="only_torch"
    version      ="0.0.8"
    edition      ="2021"
    description  ="仿造pytorch的个人玩具（仍在构思，请勿下载）AI框架"
    repository   ="https://github.com/dbsxdbsx/only_torch"
    license      ="MIT"
    documentation="https://docs.rs/only_torch"
    categories   =["ai", "machine-learning", "tensor"]
    readme       ="README.md"
    exclude      =["target/*", ".vscode/*", ".github/*", "tests/*", "justfile"]

    keywords=["machine-learning", "logic", "AI", "torch", "NEAT"]

[dependencies]
    rand   ="^0.8"
    ndarray={version="^0.15", features=["serde"]}

    # 错误处理
    thiserror="1"

    # 序列化相关项
    ndarray-npy="*"

    # （反）序列化
    serde     ={version="1.0", features=["derive"]}
    serde_json="1.0"
    bincode   ="1.3.3"

    # 从硬盘保存、加载
    # savefile       ="*"
    # savefile-derive="*"

[dev-dependencies]
    # statrs="^0.16.0"
