[package]
    name         ="only_torch"
    version      ="0.1.0"
    edition      ="2024"
    description  ="仿造pytorch的个人玩具（仍在构思，请勿使用）AI框架"
    repository   ="https://github.com/dbsxdbsx/only_torch"
    license      ="MIT"
    documentation="https://docs.rs/only_torch"
    categories   =["ai", "machine-learning", "tensor"]
    readme       ="README.md"
    exclude      =["target/*", ".vscode/*", ".github/*", "tests/*", "justfile"]

    keywords=["machine-learning", "logic", "AI", "torch", "NEAT"]

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[dependencies]
    # 代码重构
    enum_dispatch="0.3"

    # 数值相关
    approx     ="*"
    num-traits ="*"
    num-derive ="*"
    num-integer="*"
    rand       ="^0.8"
    ndarray    ={version="^0.15", features=["serde"]}

    # 错误处理
    thiserror="1"

    # 序列化相关项
    ndarray-npy="*"

    # （反）序列化
    serde     ={version="1.0", features=["derive"]}
    serde_json="1.0"
    bincode   ="1.3.3"

    # 从硬盘保存、加载
    # savefile       ="*"
    # savefile-derive="*"

    # 图像处理
    image    ="*"
    imageproc="*"
    # show-image = "0.13.1"
    # screenshots = "0.7.0"

    # 宏
    paste         ="1.0.5"
    trait_variable="*"

    # 数据加载
    flate2="1.0"    # gzip 解压
    dirs  ="5.0"    # 跨平台目录
    ureq  ="2.9"    # HTTP 下载（blocking）

[dev-dependencies]
    # statrs="^0.16.0"
