[package]
    name         ="only_torch"
    version      ="0.15.1"
    edition      ="2024"
    description  ="仿造pytorch的个人玩具（仍在构思，请勿使用）AI框架"
    repository   ="https://github.com/dbsxdbsx/only_torch"
    license      ="MIT"
    documentation="https://docs.rs/only_torch"
    categories   =["ai", "machine-learning", "tensor"]
    readme       ="README.md"
    exclude      =["target/*", ".vscode/*", ".github/*", "tests/*", "justfile"]

    keywords=["machine-learning", "logic", "AI", "torch", "NEAT"]

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

# Debug 模式优化：在保持可调试性的前提下提升运行速度
# opt-level=1 对本项目代码开启基本优化（循环优化、部分内联）
[profile.dev]
    opt-level=1

# 对所有依赖开启最大优化（仅影响本项目开发，不影响下游用户）
# 显著加速 debug 模式下的 CNN 等计算密集型测试
[profile.dev.package."*"]
    opt-level=3

[features]
    default=[]
    # BLAS 加速：Intel MKL（推荐 Intel CPU）
    # 用法：cargo build --features blas-mkl
    # 注：本地无 MKL 时会自动从 GitHub Container Registry 下载预编译二进制
    blas-mkl=["ndarray/blas", "dep:intel-mkl-src"]
    # BLAS 加速：OpenBLAS（跨平台备选）
    # 用法：cargo build --features blas-openblas
    blas-openblas=["ndarray/blas", "dep:openblas-src"]

[dependencies]
    # BLAS 后端（可选，通过 feature 启用）
    # lp64 = 32 位整型索引（与 ndarray/cblas-sys 兼容）
    # seq = 单线程（避免与 rayon 线程池冲突）
    intel-mkl-src={version="0.8", optional=true, default-features=false, features=[
        "mkl-static-lp64-seq",
    ]}
    openblas-src={version="0.10", optional=true, features=["static"]}

    # 代码重构
    enum_dispatch="0.3"
    strum        ={version="0.26", features=["derive"]} # 枚举遍历和元数据

    # 数值相关
    approx     ="*"
    num-traits ="*"
    num-derive ="*"
    num-integer="*"
    rand       ="^0.8"
    ndarray    ={version="^0.15", features=["serde"]}

    # 错误处理
    thiserror="1"

    # 序列化相关项
    ndarray-npy="*"

    # （反）序列化
    serde     ={version="1.0", features=["derive"]}
    serde_json="1.0"
    bincode   ="1.3.3"

    # 从硬盘保存、加载
    # savefile       ="*"
    # savefile-derive="*"

    # 图像处理
    image    ="*"
    imageproc="*"
    # show-image = "0.13.1"
    # screenshots = "0.7.0"

    # 宏
    paste         ="1.0.5"
    trait_variable="*"

    # 数据加载
    flate2="1.0"  # gzip 解压
    dirs  ="5.0"  # 跨平台目录
    ureq  ="2.9"  # HTTP 下载（blocking）
    md-5  ="0.10" # MD5 校验（RustCrypto）

    # ONNX 模型互操作（零依赖 protobuf 解析/编码）
    onnx-rs="0.1"

    # 并行计算
    rayon="1.10" # 数据并行

    # Python 交互（强化学习 Gym 环境）
    pyo3 ={version="0.27", features=["auto-initialize"]}
    numpy="0.27"

[dev-dependencies]
    # statrs="^0.16.0"
    serial_test="3"                                        # pyo3 测试需要串行执行，避免 Python 模块导入竞争
    criterion  ={version="0.5", features=["html_reports"]}

[[bench]]
    name   ="conv2d"
    harness=false

[[bench]]
    name   ="backward"
    harness=false

[[bench]]
    name   ="end_to_end"
    harness=false

[[bench]]
    name   ="tensor_ops"
    harness=false

    # ==================== 示例 ====================

[[example]]
    name="xor"
    path="examples/traditional/xor/main.rs"

[[example]]
    name="sine_regression"
    path="examples/traditional/sine_regression/main.rs"

[[example]]
    name="iris"
    path="examples/traditional/iris/main.rs"

[[example]]
    name="mnist"
    path="examples/traditional/mnist/main.rs"

[[example]]
    name="california_housing"
    path="examples/traditional/california_housing/main.rs"

[[example]]
    name="parity_rnn_fixed_len"
    path="examples/traditional/parity_rnn_fixed_len/main.rs"

[[example]]
    name="parity_rnn_var_len"
    path="examples/traditional/parity_rnn_var_len/main.rs"

[[example]]
    name="parity_lstm_var_len"
    path="examples/traditional/parity_lstm_var_len/main.rs"

[[example]]
    name="parity_gru_var_len"
    path="examples/traditional/parity_gru_var_len/main.rs"

[[example]]
    name="mnist_cnn"
    path="examples/traditional/mnist_cnn/main.rs"

[[example]]
    name="single_object_segmentation"
    path="examples/traditional/single_object_segmentation/main.rs"

[[example]]
    name="single_object_detection"
    path="examples/traditional/single_object_detection/main.rs"

[[example]]
    name="mnist_gan"
    path="examples/traditional/mnist_gan/main.rs"

[[example]]
    name="dual_input_add"
    path="examples/traditional/dual_input_add/main.rs"

[[example]]
    name="siamese_similarity"
    path="examples/traditional/siamese_similarity/main.rs"

[[example]]
    name="dual_output_classify"
    path="examples/traditional/dual_output_classify/main.rs"

[[example]]
    name="multi_io_fusion"
    path="examples/traditional/multi_io_fusion/main.rs"

[[example]]
    name="multi_label_point"
    path="examples/traditional/multi_label_point/main.rs"

[[example]]
    name="chess_cnn_onnx_finetune"
    path="examples/traditional/chess_cnn_onnx_finetune/main.rs"

[[example]]
    name="chess_yolo_onnx_detect"
    path="examples/traditional/chess_yolo_onnx_detect/main.rs"

[[example]]
    name="cartpole_sac"
    path="examples/traditional/sac/cartpole/main.rs"

[[example]]
    name="pendulum_sac"
    path="examples/traditional/sac/pendulum/main.rs"

[[example]]
    name="moving_sac"
    path="examples/traditional/sac/moving/main.rs"

[[example]]
    name="evolution_xor"
    path="examples/evolution/xor/main.rs"

[[example]]
    name="evolution_iris"
    path="examples/evolution/iris/main.rs"

[[example]]
    name="evolution_parity_seq"
    path="examples/evolution/parity_seq/main.rs"

[[example]]
    name="evolution_mnist"
    path="examples/evolution/mnist/main.rs"

[[example]]
    name="evolution_parity_seq_var_len"
    path="examples/evolution/parity_seq_var_len/main.rs"
