[project]
name = "gym-env"
version = "0.1.0"
description = "only_torch 自定义 Gymnasium 环境（五子棋等）"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=1.3.0,<2.0",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gym_env", "gym_env.gomoku"]

[tool.setuptools.package-dir]
"gym_env" = "."
"gym_env.gomoku" = "gomoku"
